package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_runtime", "py_runtime_pair")

py_runtime(
    name = "py3_runtime",
    files = ["@python_interpreter_src//:files"],
    interpreter = "//third_party/python3:python3_filegroup",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

py_runtime_pair(
    name = "py3_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":py3_runtime",
)

toolchain(
    name = "py3_toolchain",
    toolchain = ":py3_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

sh_binary(
    name = "python3_interpreter_binary",
    srcs = ["//third_party/python:python3_filegroup"],
)
